--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,7 +228,11 @@
     */
 
     <!-- Saved Screen Strings -->
-    <string name="saved_screen_title" translatable="false">Saved Events</string>
+    <string name="saved_screen_title">Saved Events</string>
+    <string name="saved_screen_no_events">No saved events.</string>
+    <string name="saved_screen_today">Today</string>
+    <string name="saved_screen_upcoming">Upcoming</string>
+
 
     /**
     * package: settings
