--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -97,6 +97,10 @@
     <string name="user_settings_bio" translatable="true">Modifier Biographie</string>
     <string name="user_settings_edit_interests" translatable="true">Modifier vos centres d\'intérêts</string>
     <string name="user_settings_edit_socials" translatable="true">Modifier vos réseaux sociaux</string>
+    <string name="user_settings_discard_changes" translatable="true">Annuler vos modifications</string>
+    <string name="user_settings_save_changes" translatable="true">Sauvegarder vos modifications</string>
+    <string name="user_settings_modified_successfully" translatable="true">Changements correctement modifié</string>
+
 
 
     <!-- EmailVerification Strings -->
