--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -286,7 +286,7 @@
     */
 
     <!-- General Strings -->
-    <string name="no_internet_connection">Il semble que vous êtes hors-ligne</string>
+    <string name="no_internet_connection">Vous semblez être hors-ligne</string>
 
     <!-- EventListOverview Strings -->
     <string name="event_upcomingEvents">Évènements à venir</string>
