--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,11 @@
     <string name="event_creation_end_equals_start">Event cannot start and end at the same time</string>
     <string name="event_creation_failed">Failed to create event</string>
 
+    <!-- Event Edit Strings -->
+    <string name="event_edit_title">Edit </string>
+    <string name="event_edit_delete_button">Delete</string>
+    <string name="event_edit_failed">Failed to edit event</string>
+    <string name="event_edit_save_button">Save</string>
 
     <!-- Associations Overlay Strings -->
     <string name="associations_overlay_coauthors_title" translatable="true">Coauthors</string>
