--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,8 +139,6 @@
     <string name="welcome_content_description_hide_password">Hide password</string>
     <string name="welcome_content_description_show_password">Show password</string>
     <string name="welcome_forgot_password">Reset your password</string>
-    <string name="welcome_toast_reset_password">An email has been sent to the given address</string>
-    <string name="welcome_toast_reset_password_error">Failed to send the email</string>
 
     /**
     * package: event
@@ -390,6 +388,16 @@
     <string name="interest_food" translatable="true">Food</string>
     <string name="interest_gaming" translatable="true">Gaming</string>
     <string name="interest_festivals" translatable="true">Festivals</string>
+
+    <!-- Reset Password Strings -->
+    <string name="reset_password_success_toast">An email has been sent to the given address</string>
+    <string name="reset_password_error_toast">Failed to send the email</string>
+    <string name="reset_password_go_back" translatable="false">Go back to home page</string>
+    <string name="reset_password_text">Please provide an email address</string>
+    <string name="reset_password_email_place_holder">The link will be sent to this address</string>
+    <string name="reset_password_button">Confirm</string>
+    <string name="reset_password_invalid_email">Please enter a valid email</string>
+
 
     <!-- Debug/Temporary Strings -->
     <string name="debug_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur
