--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -401,6 +401,8 @@
 
     <!-- Notification Strings -->
     <string name="notification_event_reminder" translatable="true">The event is about to begin :)</string>
+    <string name="notification_event_reminder_default_message" translatable="true">"An event will occur soon"</string>
+    <string name="notification_event_reminder_default_title" translatable="false">Unio</string>
 
 
     <!-- Debug/Temporary Strings -->
