chore(UserDeletion): change test tags post merge conflicts

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -106,6 +106,8 @@
     <string name="user_edition_delete_user_confirm" translatable="true">Confirmer</string>
     <string name="user_edition_delete_user_success" translatable="true">Votre compte a été supprimer</string>
     <string name="user_edition_delete_user_failure" translatable="true">Echec de suppression de compte, veuillez essayer plus tard</string>
+    <string name="user_edition_modified_offline" translatable="true">Suppression du compte hors ligne</string>
+
 
 
     <!-- EmailVerification Strings -->
