--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,7 +111,7 @@
     <string name="user_edition_delete_user_confirm" translatable="true">Confirm</string>
     <string name="user_edition_delete_user_success" translatable="true">Your Account has been deleted</string>
     <string name="user_edition_delete_user_failure" translatable="true">Failed to delete account, try again later</string>
-
+    <string name="user_edition_modified_offline" translatable="true">Deleted user offline</string>
 
     <!-- EmailVerification Strings -->
     <string name="email_verification_refresh_failed">Failed to refresh</string>
