refactor: remove hardcoded string

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -147,6 +147,7 @@
     <string name="event_card_content_description_saved_event">Sauvegardé</string>
     <string name="event_card_content_description_not_saved_event">Non sauvegardé</string>
     <string name="event_card_content_description_association_logo">Logo d\'association</string>
+    <string name="event_card_interested_string">Intéréssés</string>
 
     <!-- Event Creation Strings -->
     <string name="event_creation_screen">Création d\'un évènement</string>
