--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -107,7 +107,7 @@
     <string name="user_edition_delete_user_success" translatable="true">Votre compte a été supprimer</string>
     <string name="user_edition_delete_user_failure" translatable="true">Echec de suppression de compte, veuillez essayer plus tard</string>
     <string name="user_edition_modified_offline" translatable="true">Suppression du compte hors ligne</string>
-
+    <string name="user_edition_delete_user_offline" translatable="true">Veuillez être connecté à l\'Internet pour supprimer votre compte</string>
 
 
     <!-- EmailVerification Strings -->
