chore(event-edit-component): extract out hardcoded string and add translation

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -189,6 +189,11 @@
     <string name="event_edit_failed">Echec lors de la modification</string>
     <string name="event_edit_save_button">Sauvegarder</string>
 
+    <!-- Event Edit Component Strings -->
+    <string name="event_edit_date_picker_desc">Choisir la date</string>
+    <string name="event_edit_time_picker_desc">Choisir l\'heure</string>
+    <string name="event_edit_toast_more_button">Continuez à taper pour voir plus de résultats</string>
+
     <!-- Associations Overlay Strings -->
     <string name="associations_overlay_coauthors_title" translatable="true">Co-organisateurs</string>
     <string name="associations_overlay_coauthors_description" translatable="true">Choisir quels associations organisent l\'évènement avec vous</string>
