--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,8 +195,9 @@
     <string name="event_edit_save_button">Save</string>
 
     <!-- Event Edit Component Strings -->
-    <string name="event_edit_date_picker_desc" translatable="false">Select date</string>
-    <string name="event_edit_time_picker_desc" translatable="false">Select time</string>
+    <string name="event_edit_date_picker_desc">Select date</string>
+    <string name="event_edit_time_picker_desc">Select time</string>
+    <string name="event_edit_toast_more_button">Continue typing to see more results</string>
 
     <!-- Associations Overlay Strings -->
     <string name="associations_overlay_coauthors_title" translatable="true">Coauthors</string>
